# nrf52-hal

./: Cargo.toml
examples/nvmc-demo/: Cargo.toml
examples/nvmc-demo/.cargo/: config
examples/nvmc-demo/src/: main.rs
nrf52-hal-common/: Cargo.toml
nrf52-hal-common/src/: lib.rs  nvmc.rs  rtc.rs  timer.rs  uarte.rs
nrf52832-hal/: Cargo.toml
