[package]
name = "nvmc-demo"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.5"
panic-semihosting = "0.5.0"

[dependencies.nrf52810-hal]
version = "0.8.0"
path = "../../nrf52810-hal"
optional = true

[dependencies.nrf52832-hal]
version = "0.8.0"
path = "../../nrf52832-hal"
optional = true
features = ["xxAB-package"]

[dependencies.nrf52840-hal]
version = "0.8.0"
path = "../../nrf52840-hal"
optional = true

[features]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
default = ["52832"]
